testData/diagnostics/invalid_float_2.diag.txt
testData/diagnostics/invalid_float_2.nut line = (1) column = (8) : error: malformed number
println(1e4......)
        ^--

